--- a/index.html
+++ b/index.html
@@ -4,17 +4,84 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"
+    defer></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@latest/css/materialdesignicons.min.css">
+  <link rel="stylesheet" href="style.css">
   <title>ESRB</title>
 </head>
 
 
-<body>
+<body class=" sports-Betting-Background">
 
-  <header>
-
+  <header class="container-fluid bg-success text-dark">
+    <h1>Extremely Realistic Sports Bets!</h1>
   </header>
 
-  <main>
+  <main class="container-fluid">
+    <section class="row m-5">
+      <div class="col d-flex justify-content-center">
+        <div class="card text-bg-success mb-3 rounded" style="width: 25em; height: 3em;">
+          <div class="card-body">
+            <p class="card-text text-end">$20,000,000</p>
+          </div>
+        </div>
+
+    </section>
+
+    <section class="row m-5 text-center">
+
+      <div class="col-md-6">
+        <div class="card border border-3 border-info">
+          <H1>Team 1</H1>
+        </div>
+      </div>
+
+      <div class="col-md-6">
+        <div class="card border border-3 border-danger">
+          <H1>Team 2</H1>
+        </div>
+      </div>
+
+
+    </section>
+
+    <section class="row m-5">
+
+    </section>
+
+    <section class="row m-5 d-flex justify-content-center">
+
+      <div class="col-md-6">
+
+        <button type="button" class="btn btn-primary btn-lg m-1">Bet $5</button>
+
+        <button type="button" class="btn btn-primary btn-lg m-1">Bet $25</button>
+
+        <button type="button" class="btn btn-primary btn-lg m-1">Bet $100</button>
+
+        <button type="button" class="btn btn-primary btn-lg m-1">Bet it all!</button>
+
+      </div>
+
+      <div class="col-md-6">
+
+        <button type="button" class="btn btn-danger btn-lg m-1">Bet $5</button>
+
+        <button type="button" class="btn btn-danger btn-lg m-1">Bet $25</button>
+
+        <button type="button" class="btn btn-danger btn-lg m-1">Bet $100</button>
+
+        <button type="button" class="btn btn-danger btn-lg m-1">Bet it all!</button>
+
+      </div>
+
+
+    </section>
 
   </main>
 
