Changed the d-flex to be on the button columns rather than the button rows

--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
 
     </section>
 
-    <section class="row m-5 d-flex justify-content-center">
+    <section class="row m-5">
 
-      <div class="col-md-6">
+      <div class="col-md-6  d-flex">
 
         <button type="button" class="btn btn-primary btn-lg m-1">Bet $5</button>
 
@@ -68,7 +68,7 @@
 
       </div>
 
-      <div class="col-md-6">
+      <div class="col-md-6 d-flex">
 
         <button type="button" class="btn btn-danger btn-lg m-1">Bet $5</button>
 
