Added array for team players

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 
-<body class=" sports-Betting-Background">
+<body class="container-fluid sports-Betting-Background">
 
   <header class="container-fluid bg-success text-dark">
     <h1>Extremely Realistic Sports Bets!</h1>
