Created the functions which populate the team roster on the HTML page

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
     <section class="row m-5 text-center">
 
       <div class="col-md-6">
-        <div class="card border border-3 border-info">
-          <H1>Team 1</H1>
+        <div class="card border border-3 border-info" style="width: 15em; height: 3em;">
+          <span id="team1"></span>
         </div>
       </div>
 
