--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
       </div>
 
       <div class="col-md-6">
-        <div class="card border border-3 border-danger">
-          <H1>Team 2</H1>
+        <div class="card border border-3 border-danger" style="width: 15em; height: 3em;">
+          <span id="team2"></span>
         </div>
       </div>
 
